	PR tree-optimization/54669 	* tree-ssa-loop-ivcanon.c (propagate_into_all_uses): Invoke 	maybe_clean_or_replace_eh_stmt on the modified use statements.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@191654 138bc75d-0d04-0410-961f-82ee72b054a4